distribution/knative/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: knative-serving
  labels:
    serving.knative.dev/release: v0.22.0
    networking.knative.dev/ingress-provider: istio
spec:
  mtls:
    mode: PERMISSIVE
