distribution/knative/destinationrule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: activator
  namespace: knative-serving
spec:
  host: activator-service.knative-serving.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
