distribution/knative/allow-all-ns-knative-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-knative-serving
  namespace: knative-serving
  labels:
    serving.knative.dev/release: v0.22.0
    networking.knative.dev/ingress-provider: istio
spec:
  action: ALLOW
  rules:
  - {}
  # - when:
  #   - key: source.namespace
  #     values:
  #     - knative-serving
  # - from:
  #   - source:
  #       namespaces:
  #       - knative-serving
